--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,6 @@
-HELP.md
 .gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-# Arquivos de build e saída
-/build/
-/bin/
-/out/
-/.gradle/
-/.idea/
-
-# Arquivos de configuração pessoal
-/.vscode/
-/.settings/
-
-# Arquivos de log
-*.log
-
-# Arquivos de propriedades sensíveis
-application.properties
-application.yml
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
+build
+gradle/wrapper
+gradlew
+gradlew.bat
+settings.gradle
